feat: enhance .env.example with additional environment variables and update README for clarity; improve ErrorNotFound page design; fix timezone handling in email confirmation; adjust CSRF_TRUSTED_ORIGINS setting; refine button styles in EventsPage

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,30 @@
+# Habilita o modo de depuração do Django. Use “True” em desenvolvimento e “False” em produção.
 DEBUG=
+
+# Chave secreta do Django, usada para criptografia de sessões e tokens. Mantenha em segredo!
 SECRET_KEY=
+
+# Lista de hosts permitidos a acessar a aplicação, separados por vírgula (ex: “meusite.com,localhost”).
 ALLOWED_HOSTS=
+
+# Endereço do servidor SMTP para envio de e‑mails (ex: “smtp.gmail.com”).
+EMAIL_HOST=
+
+# Usuário/login para autenticação no servidor de e‑mail.
 EMAIL_HOST_USER=
+
+# Senha correspondente ao EMAIL_HOST_USER para autenticação no servidor de e‑mail.
 EMAIL_HOST_PASSWORD=
+
+# Endereço de e‑mail padrão que aparecerá como remetente nas mensagens enviadas pela aplicação.
 DEFAULT_FROM_EMAIL=
+
+# URL base do site (ex: “https://meusite.com”). Usada em links de e‑mail e redirecionamentos.
 SITE_URL=
+
+# Diretório onde a aplicação vai armazenar todos os arquivos persistentes:
+#   • Arquivos de mídia (uploads de usuário, imagens, PDFs etc.)
+#   • Arquivo de banco de dados SQLite (se estiver usando sqlite)
+# Cenário de uso: basta montar um volume ou conectar um bucket/storage a esse caminho
+# dentro do container, e todos os seus dados ficarão persistidos e isolados ali.
 STORAGE_BASE_DIR=
