feat: add CSRF_TRUSTED_ORIGINS to .env.example for proxy support; update dark mode setting in Quasar config

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,8 @@ SITE_URL=
 # Cenário de uso: basta montar um volume ou conectar um bucket/storage a esse caminho
 # dentro do container, e todos os seus dados ficarão persistidos e isolados ali.
 STORAGE_BASE_DIR=
+
+# Domínios confiáveis para requisições CSRF (Cross-Site Request Forgery).
+# Necessário quando a aplicação roda atrás de um proxy ou em um domínio diferente do padrão.
+# Exemplo: “https://meusite.com” ou “https://*.meudominio.com”
+CSRF_TRUSTED_ORIGINS=
